Create a variable for the redis.conf and default it to be consistent with /etc/redis/$PORT.conf

--- a/templates/RedHat/redis.init.j2
+++ b/templates/RedHat/redis.init.j2
@@ -16,7 +16,7 @@ fi
 
 REDIS_USER={{ redis_user }}
 PIDFILE={{ redis_pidfile }}
-CONF="/etc/redis/${REDIS_PORT}.conf"
+CONF={{ redis_conf_file }}
 EXEC={{ redis_install_dir }}/bin/redis-server
 CLIEXEC={{ redis_install_dir }}/bin/redis-cli
 
