--- a/templates/Debian/redis.init.j2
+++ b/templates/Debian/redis.init.j2
@@ -24,7 +24,7 @@ DAEMON={{ redis_install_dir }}/bin/redis-server
 PIDFILE={{ redis_pidfile }}
 
 REDIS_USER={{ redis_user }}
-CONF="/etc/redis/${REDIS_PORT}.conf"
+CONF={{ redis_conf_file }}
 CLIEXEC={{ redis_install_dir }}/bin/redis-cli
 
 if [ -r /etc/default/redis_${REDIS_PORT} ]; then
