--- a/templates/default/redis.init.j2
+++ b/templates/default/redis.init.j2
@@ -13,7 +13,7 @@ CLIEXEC={{ redis_install_dir }}/bin/redis-cli
 {% endif %}
 
 PIDFILE={{ redis_pidfile }}
-CONF="/etc/redis/${REDIS_PORT}.conf"
+CONF={{ redis_conf_file }}
 
 case "$1" in
     start)
