--- a/templates/redis.conf.j2
+++ b/templates/redis.conf.j2
@@ -1,5 +1,5 @@
 # Redis {{ redis_version }} configuration file
-# {{ redis_port }}.conf
+# {{ redis_conf_file }}
 
 # Note on units: when memory size is needed, it is possible to specify
 # it in the usual form of 1k 5GB 4M and so forth:
